--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <header>Insert Title here</header>
         <nav>
             <ul>
-                <li><a href="/home"> Homepage </a></li>
+                <li><a href="/"> Homepage </a></li>
                 <li><a href="/projects"> Projects </a></li>
                 <li><a href="/education"> Education </a></li>
                 <li><a href="/about"> About </a></li>
