--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1>Welcome to my site!</h1>
+<p>This is the home page.</p>
+{% endblock %}
 <html lang="en">
     <body>
         <header>Insert Title here</header>
