Thu, Mar 16, 2023, 1:47 PM +08:00

--- a/templates/education.html
+++ b/templates/education.html
@@ -1,8 +1,13 @@
+{% extends 'base.html' %}
 
+{% block title %}Home{% endblock %}
+
+{% block content %}
     <h2>Education</h2>
     <ul>
-      <li>Completed [Year of completion] Senior High School education at [Name of School], Sabah, Malaysia</li>
-      <li>Completed [Year of completion] CS50x and CS50P courses from HarvardX, Harvard University</li>
-      <li>Completed [Year of completion] ABRSM Performance Diploma in Violin</li>
+    <li>Completed [Year of completion] Senior High School education at [Name of School], Sabah, Malaysia</li>
+    <li>Completed [Year of completion] CS50x and CS50P courses from HarvardX, Harvard University</li>
+    <li>Completed [Year of completion] ABRSM Performance Diploma in Violin</li>
     </ul>
-  </section>
+    </section>
+{% endblock %}
