--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
         <li><a href="/projects"> Projects </a></li>
         <li><a href="/education"> Education </a></li>
         <li><a href="/about"> About </a></li>
-        <li><a href="/resume"> Resume </a></li>
+        <a href="https://github.com/GabrielC15.github.io/temp.pdf" target="_blank">Resume</a>
       </ul>
     </nav>
   </header>
