--- a/templates/education.html
+++ b/templates/education.html
@@ -5,9 +5,9 @@
 {% block content %}
     <h2>Education</h2>
     <ul>
-    <li>Completed [Year of completion] Senior High School education at [Name of School], Sabah, Malaysia</li>
-    <li>Completed [Year of completion] CS50x and CS50P courses from HarvardX, Harvard University</li>
-    <li>Completed [Year of completion] ABRSM Performance Diploma in Violin</li>
+    <li>Completed 2022 Senior High School education at [Name of School], Sabah, Malaysia</li>
+    <li>Completed 2023 CS50x and CS50P courses from HarvardX, Harvard University</li>
+    <li>Completed 2022 ABRSM Performance Diploma in Violin</li>
     </ul>
     </section>
 {% endblock %}
