--- a/templates/education.html
+++ b/templates/education.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>Education</h2>
     <ul>
-    <li>Completed 2022 Senior High School education at [Name of School], Sabah, Malaysia</li>
+    <li>Completed 2022 Senior High School education at Sabah Tshung Tsin Secondary School, Sabah, Malaysia</li>
     <li>Completed 2023 CS50x and CS50P courses from HarvardX, Harvard University</li>
     <li>Completed 2022 ABRSM Performance Diploma in Violin</li>
     </ul>
